fix: harden terminal tool execution